--- a/index.html
+++ b/index.html
@@ -156,15 +156,17 @@
   <!-- work-process -->
   <div class="work-process">
     <div class="container">
-      <div class="row">
-        <div class="offset-lg-3 col-xl-12">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="box-head">
             <h3 class="inner-title">Work Process</h3>
             <p class=" inner-desc">Aenean nec tempor metus. Maecenas ligula dolor, commodo in imperdiet
               interdum, vehicula ut ex. Donec ante diam.</p>
           </div>
         </div>
-        <div class="col-2">
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -175,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -186,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -197,7 +199,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -208,7 +210,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -219,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6">
           <div class="box-item">
             <div class="item-image">
               <img src="./assets/image/work-process-item-01.png" alt="">
@@ -238,8 +240,8 @@
   <!-- Testimonials -->
   <div class="testimonials">
     <div class="container">
-      <div class="row">
-        <div class="offset-lg-3 col-xl-12">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="box-head">
             <h3 class="inner-title">What do they say?</h3>
             <p class="inner-desc">Donec tempus, sem non rutrum imperdiet, lectus orci fringilla nulla, at accumsan elit
@@ -248,15 +250,16 @@
           </div>
         </div>
       </div>
+
       <div class="row">
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="testimonials-item">
             <div class="testimonials-content">
               <div class="content-image">
                 <img src="/assets/image/testimonial-icon.png" alt="icon1">
               </div>
               <p>Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci.
-                Maecenas a finibus odio.</p>
+                Maecenas a finibus odio.Maecenas a finibus odio</p>
               <div class="team-info">
                 <h3 class="user-name">Catherine Soft</h3>
                 <span>Managing Director</span>
@@ -264,7 +267,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="testimonials-item">
             <div class="testimonials-content">
               <div class="content-image">
@@ -280,7 +283,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="testimonials-item">
             <div class="testimonials-content">
               <div class="content-image">
@@ -303,8 +306,8 @@
   <!-- Plans -->
   <div class="plans">
     <div class="container">
-      <div class="row">
-        <div class="offset-lg-3 col-xl-12">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="box-head">
             <h3 class="inner-title">Pricing Plans</h3>
             <p class=" inner-desc">Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis arcu elementum,
@@ -313,7 +316,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="plans-item">
             <div class="plans-content">
               <div class="content-title">Starter</div>
@@ -336,7 +339,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="plans-item">
             <div class="plans-content">
               <div class="content-title">Premium</div>
@@ -359,7 +362,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="plans-item">
             <div class="plans-content">
               <div class="content-title">Advanced</div>
@@ -429,8 +432,8 @@
   <!-- Blog -->
   <div class="blog">
     <div class="container">
-      <div class="row">
-        <div class="offset-lg-3 col-xl-12">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="box-head">
             <h3 class="inner-title">Blog Entries</h3>
             <p class=" inner-desc">Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae,
@@ -440,7 +443,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="blog-item">
             <div class="blog-image">
               <img src="/assets/image/blog-item-01.png" alt="blog-item-01">
@@ -456,7 +459,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="blog-item">
             <div class="blog-image">
               <img src="/assets/image/blog-item-02.png" alt="blog-item-02">
@@ -472,7 +475,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="blog-item">
             <div class="blog-image">
               <img src="/assets/image/blog-item-03.png" alt="blog-item-03">
@@ -495,8 +498,8 @@
   <!-- Contact -->
   <div class="contact">
     <div class="container">
-      <div class="row">
-        <div class="offset-lg-3 col-xl-12">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="box-head">
             <h3 class="inner-title">Talk To Us</h3>
             <p class=" inner-desc">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin. Cras feugiat
